Cleanup various sonar code smells